Implemented animation to header main title and sub-title

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
   </head>
   <body>
     <header class="header">
+      <!-- logo and header image -->
       <div class="logo-box">
         <img src="images/logo-white.png" alt="Logo" class="logo" />
       </div>
 
+      <!-- header title -->
       <div class='text-box'>
         <h1 class="heading-primary">
           <span class="heading-primary-main">outdoors</span>
