--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
           <span class="heading-primary-main">outdoors</span>
           <span class="heading-primary-sub">is where life happens</span>
         </h1>
+
+        <a href="#" class="btn btn-white">Disover Our Tours</a>
       </div>
     </header>
   </body>
