--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       </div>
 
       <!-- header title -->
-      <div class='text-box'>
+      <div class="text-box">
         <h1 class="heading-primary">
           <span class="heading-primary-main">outdoors</span>
           <span class="heading-primary-sub">is where life happens</span>
         </h1>
 
-        <a href="#" class="btn btn-white">Disover Our Tours</a>
+        <a href="#" class="btn btn-white btn-animated">Disover Our Tours</a>
       </div>
     </header>
   </body>
